# medars

./: .gitignore  Cargo.toml  README.md  build.rs  tldr.md
src/: logger.rs  main.rs  metadata.rs
src/ui/: app.rs  fast_image_loader.rs  image_panel.rs  image_utils.rs  mod.rs  ratatui_ui.rs
