[package]
name = "medars"
version = "0.1.0"
edition = "2021"
description = "A command-line tool to inspect and remove metadata from image files"
authors = ["brockar <martinnguzman.mg@gmail.com>"]
license = "MIT"

[[bin]]
name = "medars"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
clap = { version = "4.5.43", features = ["derive"] }
kamadak-exif = "0.6.1"
ratatui = "0.29.0"
crossterm = "0.29.0"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
log = "0.4"
env_logger = "0.11.8"
rexiv2 = "0.10.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"